# iac-sentinel

./: .env.example  .gitignore  DECISIONS.md  README.md  action.yml  pyproject.toml
.github/workflows/: iac-sentinel.yml
examples/: run_local.py
src/iac_sentinel/: analysis.py  cli.py  llm.py  models.py  plan_parser.py  publish.py  report.py  reviewer.py  rules.py
tests/: test_plan_parser.py  test_rules.py
tests/fixtures/: contextual_plan.json  sample_plan.json
